test/Fail/QuotePatternLiteral.err
QuotePatternLiteral.agda:7.1-16: error: [CannotQuote.Pattern]
'quote' expects an unambiguous defined name,
but here the argument is a literal pattern
when scope checking the left-hand side test (quote 42) in the
definition of test
